Wed Mar 14 02:27:59 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update for 1.3.0.

Tue Mar 13 10:44:11 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.9 and ChangeLog.

Mon Mar 12 10:55:57 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: If the document with the highest existing docid was
	  updated, we'd previously report it as "added", but now we correctly
	  report it as "updated".

Mon Mar 12 10:50:55 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Catch and report std::exception.

Mon Feb 20 02:45:12 GMT 2012  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: More extensions to ignore by default:
	  fon pyd ttf

Sun Feb 19 22:20:49 GMT 2012  Olly Betts <olly@survex.com>

	* docs/overview.rst: Wrap over-long line.

Thu Feb 16 06:52:24 GMT 2012  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: Add more extensions to the default
	  ignore list: bin dat db jar lnk pyc pyo sqlite sqlite3 sqlite-journal
	  tmp

Fri Jan 27 03:36:10 GMT 2012  Olly Betts <olly@survex.com>

	* docs/overview.rst,htmlparse.cc,htmlparsetest.cc: Add support for
	  ignoring sections bracketed by <!--UdmComment--> and
	  <!--/UdmComment--> like we already do for <!--htdig_noindex-->.
	  Patch from Raphael Geissert.

Fri Dec 23 05:44:08 GMT 2011  Olly Betts <olly@survex.com>

	* docs/overview.rst: Document that libmagic is used to determine
	  the MIME type if the extension isn't known.  Partly addresses
	  ticket#569.

Fri Dec 23 01:29:17 GMT 2011  Olly Betts <olly@survex.com>

	* docs/overview.rst: We now limit time as well as CPU and memory for
	  external filters.

Thu Dec 22 10:55:44 GMT 2011  Olly Betts <olly@survex.com>

	* query.cc: Drop special handling for R-prefixed terms in $prettyterm
	  - we stopped generating these in Xapian 1.0.

Thu Dec 22 03:50:30 GMT 2011  Olly Betts <olly@survex.com>

	* INSTALL,configure.ac,diritor.cc,diritor.h: Make libmagic a required
	  dependency.
